implemented stream for IO

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,19 +2,19 @@ cmake_minimum_required(VERSION 3.2)
 project(app1 C ASM)
 
 set ( CMAKE_EXECUTABLE_SUFFIX ".elf")
-set( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mcpu=cortex-a8 -mabi=aapcs -ffreestanding -std=gnu99 -g -O -lc -lgcc ")
+set( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mcpu=cortex-a8 -mabi=aapcs -ffreestanding -std=gnu99 -g -O   ")
 set( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -nostartfiles" )
 set( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -nodefaultlibs" )
-set(CMAKE_SHARED_LIBRARY_LINK_C_FLAGS " -export-dynamic -nostartfiles -lc -lgcc -Wl,--build-id=none" )
+set(CMAKE_SHARED_LIBRARY_LINK_C_FLAGS " -export-dynamic -nostartfiles  -lgcc -Wl,--build-id=none -nodefaultlibs" )
 set(CMAKE_ASM_FLAGS "${CMAKE_ASM_FLAGS} -mcpu=cortex-a8 -g")
 set(RELEASE_SOURCE_FILES libc/string.c libc/string.h libc/math.h libc/math.c libc/io.h libc/io.c
         kernel/boot.S kernel/kernel.c kernel/kernel.h kernel/interrupt.h kernel/interrupt.S
-        device/device.h device/device.c system/systemcall.c system/systemcall.h
+        device/device.h device/device.c system/systemcall.c system/systemcall.h system/syslib.c system/syslib.h
         user/P0.h user/P0.c user/P1.h user/P1.c user/P2.h user/P2.c
         device/disk.c device/disk.h device/GIC.h device/GIC.c device/PL011.c device/PL011.h device/SP804.c device/SP804.h
-        kernel/boot.h kernel/process.c kernel/process.h system/sys_init.c system/sys_init.h user/programs.c user/programs.h)
+        kernel/boot.h kernel/process.c kernel/process.h kernel/sys_init.c kernel/sys_init.h user/programs.c user/programs.h kernel/syscall_def.h kernel/syscall_def.c kernel/syscall_impl.c kernel/syscall_impl.h libc/iostream.c libc/iostream.h libc/iobuffer.c libc/iobuffer.h)
 
-set(TEST_SOURCE_FILES libc/test-main.c libc/test/test.c libc/test/test.h libc/string.c libc/string.h libc/math.h libc/math.c libc/io.h libc/io.c system/syslib.c system/syslib.h)
+set(TEST_SOURCE_FILES libc/test/test-main.c libc/test/test.c libc/test/test.h libc/string.c libc/string.h libc/math.h libc/math.c libc/io.h libc/io.c )
 
 set(OUTPUT_PATH "${CMAKE_SOURCE_DIR}/build/")
 
