--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,13 +8,13 @@ set( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -nodefaultlibs" )
 set(CMAKE_SHARED_LIBRARY_LINK_C_FLAGS " -export-dynamic -nostartfiles  -lgcc -Wl,--build-id=none -nodefaultlibs" )
 set(CMAKE_ASM_FLAGS "${CMAKE_ASM_FLAGS} -mcpu=cortex-a8 -g")
 set(RELEASE_SOURCE_FILES libc/string.c libc/string.h libc/math.h libc/math.c libc/io.h libc/io.c
-        kernel/boot.S kernel/kernel.c kernel/kernel.h kernel/interrupt.h kernel/interrupt.S
+        kernel/boot.S kernel/kernel.c kernel/kernel.h
         device/device.h device/device.c system/systemcall.c system/systemcall.h system/syslib.c system/syslib.h
         user/P0.h user/P0.c user/P1.h user/P1.c user/P2.h user/P2.c
         device/disk.c device/disk.h device/GIC.h device/GIC.c device/PL011.c device/PL011.h device/SP804.c device/SP804.h
-        kernel/arm.h kernel/thread.c kernel/thread.h kernel/sys_init.c kernel/sys_init.h user/programs.c user/programs.h kernel/syscall_def.h kernel/syscall_def.c kernel/syscall_impl.c kernel/syscall_impl.h libc/iostream.c libc/iostream.h libc/iobuffer.c libc/iobuffer.h
+        kernel/arm.h kernel/thread.c kernel/thread.h kernel/sys_init.c kernel/sys_init.h user/begin.c user/begin.h kernel/syscall_def.h kernel/syscall_def.c kernel/syscall_impl.c kernel/syscall_impl.h libc/iostream.c libc/iostream.h libc/iobuffer.c libc/iobuffer.h
         user/test/test.c user/test/test.h
-        libc/assert.c libc/assert.h kernel/heap.c kernel/heap.h kernel/context.c kernel/context.h libc/array.c libc/array.h zunit/zunit_assert.c zunit/zunit_assert.h zunit/test_case.c zunit/test_case.h zunit/zunit.c zunit/zunit.h libc/allocator.c libc/allocator.h kernel/schedule.c kernel/schedule.h device/timer.c device/timer.h kernel/test/kernel_tests.c kernel/test/kernel_tests.h libc/free_list.c libc/free_list.h libc/queue.c libc/queue.h)
+        libc/assert.c libc/assert.h kernel/heap.c kernel/heap.h kernel/context.c kernel/context.h libc/array.c libc/array.h zunit/zunit_assert.c zunit/zunit_assert.h zunit/test_case.c zunit/test_case.h zunit/zunit.c zunit/zunit.h libc/allocator.c libc/allocator.h kernel/schedule.c kernel/schedule.h device/timer.c device/timer.h kernel/test/kernel_tests.c kernel/test/kernel_tests.h libc/free_list.c libc/free_list.h libc/queue.c libc/queue.h user/shell.c user/shell.h libc/util.c libc/util.h)
 
 
 set(OUTPUT_PATH "${CMAKE_SOURCE_DIR}/build/")
