--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,13 @@ set(RELEASE_SOURCE_FILES libc/string.c libc/string.h libc/math.h libc/math.c lib
         device/disk.c device/disk.h device/GIC.h device/GIC.c device/PL011.c device/PL011.h device/SP804.c device/SP804.h
         kernel/arm.h kernel/thread.c kernel/thread.h kernel/sys_init.c kernel/sys_init.h user/begin.c user/begin.h kernel/syscall_def.h kernel/syscall_def.c kernel/syscall_impl.c kernel/syscall_impl.h libc/iostream.c libc/iostream.h libc/iobuffer.c libc/iobuffer.h
         user/test/test.c user/test/test.h
-        libc/assert.c libc/assert.h kernel/context.c kernel/context.h libc/array.c libc/array.h zunit/zunit_assert.c zunit/zunit_assert.h zunit/test_case.c zunit/test_case.h zunit/zunit.c zunit/zunit.h libc/allocator.c libc/allocator.h kernel/schedule.c kernel/schedule.h device/timer.c device/timer.h kernel/test/kernel_tests.c kernel/test/kernel_tests.h libc/free_list.c libc/free_list.h user/shell.c user/shell.h libc/util.c libc/util.h libc/circular_queue.c libc/circular_queue.h fs/fdisk.c fs/fdisk.h fs/fnode.c fs/fnode.h fs/fblock.c fs/fblock.h fs/bitmap.c fs/bitmap.h fs/test/testdisk.c fs/test/testdisk.h)
+        libc/assert.c libc/assert.h kernel/context.c kernel/context.h libc/array.c libc/array.h
+        zunit/zunit_assert.c zunit/zunit_assert.h zunit/test_case.c zunit/test_case.h zunit/zunit.c zunit/zunit.h
+        libc/allocator.c libc/allocator.h kernel/schedule.c kernel/schedule.h device/timer.c device/timer.h
+        kernel/test/kernel_tests.c kernel/test/kernel_tests.h libc/free_list.c libc/free_list.h
+        user/shell.c user/shell.h libc/util.c libc/util.h libc/circular_queue.c libc/circular_queue.h
+        fs/fnode.c fs/fnode.h fs/fblock.c fs/fblock.h fs/bitmap.c fs/bitmap.h
+        fs/test/testdisk.c fs/test/testdisk.h libc/file.c libc/file.h fs/fdisk.c fs/fdisk.h fs/fs.c fs/fs.h)
 
 
 set(OUTPUT_PATH "${CMAKE_SOURCE_DIR}/build/")
